tests/ui/super-at-top-level.rs
use super::f; //~ ERROR there are too many leading `super` keywords

fn main() {
}
